service/demo-foo-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: foo-nodeport
spec:
 type: NodePort
 ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
 selector:
  app: foo-demo


# esk-demo-svc.defalut.svc.cluster.local
