service/demo-lb.yaml
apiVersion: v1
kind: Service
metadata:
 name: demo-lb
spec:
 type: LoadBalancer
 ports:
  - port: 80
    targetPort: 9090
 selector:
  app: foo-demo
