service/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: demo-ing
 labels:
  app: demo
 annotations:
  kubernetes.io/ingress.class: alb
  alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  backend:
    serviceName: foo-nodeport
    servicePort: 80
  rules:
    - host:
      http:
        paths:
          - path: /*
            backend:
              serviceName: demo-nodeport
              servicePort: 80
